Fixed issue: Fix android webview text-align bug with adding text-rendering.
In android browsers the text-align property ignored and aligned to left
instead of justify/right. This can be fixed adding the text-rendering:auto
property in your css.

--- a/media/css/cerber.css
+++ b/media/css/cerber.css
@@ -292,6 +292,7 @@ div.page-header h1 {
 .gleez-docbody {
 	text-align: justify;
 	text-justify: inter-word;
+	text-rendering: auto; //android webview bug, without this property text-align dosen't work
 	margin: 30px 0;
 }
 
